--- a/styles/main.css
+++ b/styles/main.css
@@ -3,13 +3,13 @@
     display: block;
     resize: vertical;
     min-height: 100px;
-    margin: 30px;
+    margin: 5px;
     width: 80%;
 }
 form#useradd
 {
     float: left;
-    width: 47.5%;
+    width: 35%;
     transition: 0.5s;
     
     padding-left: 20px;
@@ -17,7 +17,7 @@ form#useradd
 form#userdel
 {
     float: right;
-    width: 47.5%;
+    width: 35%;
     transition: 0.5s;
     padding-left: 20px;
 }
@@ -32,13 +32,16 @@ h6.userdisplay
     margin-bottom: 0px;
     font-size: 0.55em;
 }
-#maincontent
-{
+#maincontent {
     float: left;
     margin-left: 10px;
     width: 60%;
     background-color: #ffffff;
-    min-height: 40%;
+    backdrop-filter: blur(2px);
+    min-height: 20%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 20px;
 }
 ul#menu
 {
@@ -74,6 +77,7 @@ h1.form-header
     padding-left: 25px;
     padding-right: 50px;
     padding-bottom: 30px;
+    border-bottom-right-radius: 20px;
     font-size: 1.5em;
 }
 .error_msg
@@ -87,7 +91,7 @@ h1.form-header
     height: auto;
     margin: auto;
     margin-top: 20%;
-    background: #000000aa;
+    background: #000000;
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -119,4 +123,33 @@ h1.form-header
 #loginform>input.input_text
 {
     width: 80%;
+}
+input, label, select, button{
+    margin: 5px;
+}
+input:hover, label:hover, select:hover, button:hover {
+    transform:scale(1.05, 1.05);
+}
+input:hover, label:focus, select:focus, button:focus {
+    transform: scale(1.07, 1.07);
+}
+input[type="text"], input[type="password"], select
+{
+    background-color: #cccccc;
+    border: 1px solid #1318ff;
+    border-radius: 15px;
+    transition:ease-in-out 0.2s;
+}
+input[type="text"]:focus, input[type="password"]:focus, select:focus
+{
+     background-color: #ffffff;
+     border: 1px solid black;
+     border-radius: 5px;
+     transition:ease-in-out 0.2s;
+}
+input[type="text"]:hover, input[type="password"]:hover, select:hover {
+    background-color: #dfdfdf;
+    border: 1px solid white;
+    border-radius: 10px;
+    transition: ease-in-out 0.2s;
 }
