--- a/styles/main.css
+++ b/styles/main.css
@@ -132,7 +132,7 @@ input:hover, label:hover, select:hover, button:hover {
 input:hover, label:focus, select:focus, button:focus {
     transform: scale(1.07, 1.07);
 }
-input[type="text"], input[type="password"], select
+input[type="text"], input[type="password"], input[type="button"], input[type="submit"], select
 {
     padding-left: 10px;
     padding-right: 10px;
@@ -141,14 +141,14 @@ input[type="text"], input[type="password"], select
     border-radius: 15px;
     transition:ease-in-out 0.2s;
 }
-input[type="text"]:focus, input[type="password"]:focus, select:focus
+input[type="text"]:focus, input[type="password"]:focus, input[type="button"]:focus, input[type="submit"]:focus, select:focus
 {
      background-color: #ffffff;
      border: 1px solid black;
      border-radius: 2px;
      transition:ease-in-out 0.2s;
 }
-input[type="text"]:hover, input[type="password"]:hover, select:hover {
+input[type="text"]:hover, input[type="password"]:hover, input[type="button"]:hover, input[type="submit"]:hover, select:hover {
     background-color: #eeeeee;
     border: 1px solid white;
     border-radius: 10px;
